[tool.poetry]
name = "chicken-probability"
version = "0.1.0"
description = "Probability calculator for the dice game named \"Chicken!\""
authors = ["Zac Hayes <zrev2220@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
ruff = "^0.1.9"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
